--- a/200301-EDA&model-yuqi.Rmd
+++ b/200301-EDA&model-yuqi.Rmd
@@ -297,25 +297,25 @@ knitr::kable(y_y)
 validation
 
 ```{r}
-x.mat <- model.matrix(diagnosis~., cancer_package[-1])[,-1]
-y.class <- cancer_package$diagnosis
-
-ctrl1 <- trainControl(method = "cv", number = 5)
-lasso.fit <- train(x.mat, y.class,
-                   method = "glmnet",
-                   tuneGrid = expand.grid(alpha = 1,
-                                          lambda = tuning_grid), 
-                   # preProc = c("center", "scale"),
-                   trControl = ctrl1)
-
-lasso.fit$bestTune
-plot(lasso.fit)
-min(lasso.fit$results$RMSE)
-co=coef(lasso.fit$finalModel,lasso.fit$bestTune$lambda)
-co2=co@x
-
-names(co2)=co@Dimnames[[1]]
-co2 %>% as.data.frame() %>% knitr::kable()
+# x.mat <- model.matrix(diagnosis~., cancer_package[-1])[,-1]
+# y.class <- cancer_package$diagnosis
+# 
+# ctrl1 <- trainControl(method = "cv", number = 5)
+# lasso.fit <- train(x.mat, y.class,
+#                    method = "glmnet",
+#                    tuneGrid = expand.grid(alpha = 1,
+#                                           lambda = tuning_grid), 
+#                    # preProc = c("center", "scale"),
+#                    trControl = ctrl1)
+# 
+# lasso.fit$bestTune
+# plot(lasso.fit)
+# min(lasso.fit$results$RMSE)
+# co=coef(lasso.fit$finalModel,lasso.fit$bestTune$lambda)
+# co2=co@x
+# 
+# names(co2)=co@Dimnames[[1]]
+# co2 %>% as.data.frame() %>% knitr::kable()
 ```
 
 
