--- a/200301-EDA&model-yuqi.Rmd
+++ b/200301-EDA&model-yuqi.Rmd
@@ -170,12 +170,12 @@ tuning_grid = seq(3, 0,length = 100) ## tuning seq
 #     times: times of iteration in each lambda iteration
 # coeff -- list of final coefficient
 # best_tune -- best tuning parameter lambda
-# MSE_te -- test MSE results among cv
+# SSE_te -- test SSE results among cv
 
 lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200){
   ## create fold
   folds = createFolds(data$response,k = k, returnTrain = T)
-  cv_result = c(k = 0,best_lambda = 0, beta_vec = beta_vec, g.stat_tr = Inf,auc_te = 0,  g.stat_te = Inf,MSE_test = Inf)
+  cv_result = c(k = 0,best_lambda = 0, beta_vec = beta_vec, g.stat_tr = Inf,auc_te = 0,  g.stat_te = Inf,SSE_test = Inf)
   ## lasso coord des for train data
   for (i in 1:k) {
     tr_rows = folds[[i]]
@@ -252,12 +252,12 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
   ## use train dataset to choose lambda
   pi_hat = exp(x_tr %*% t(beta_lambda_m))/(1+exp(x_tr %*% t(beta_lambda_m)))
   residual_lambda = rep(y_tr,dim(beta_lambda_m)[1]) - pi_hat
-  MSE_tr = as.vector(rowSums(t(residual_lambda^2)))
+  SSE_tr = as.vector(rowSums(t(residual_lambda^2)))
   ## auc calculation
   auc_tr = auc(y_tr,pi_hat = pi_hat)
   g.res = (rep(y_tr,dim(beta_lambda_m)[1]) - pi_hat)/sqrt(pi_hat*(1-pi_hat))
   g.stat_tr = as.vector(rowSums(t(g.res^2)))
-  result_tr = as.tibble(cbind(beta_lambda,g.stat_tr = g.stat_tr,auc_tr = auc_tr,MSE_tr = MSE_tr))
+  result_tr = as.tibble(cbind(beta_lambda,g.stat_tr = g.stat_tr,auc_tr = auc_tr,SSE_tr = SSE_tr))
   best_result =  result_tr %>% 
     filter(auc_tr == max(auc_tr)) %>% filter(lambda == min(lambda))  
   best_result = best_result[1,]
@@ -265,12 +265,12 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
   best_result_m = as.matrix(best_result[2:(dim(best_result)[2]-3)])
   pi_hat_te = exp(x_te %*% t(best_result_m))/(1+exp(x_te %*% t(best_result_m)))
   residual_test = y_te - pi_hat_te
-  MSE_test = as.vector(rowSums(t(residual_test^2)))
+  SSE_test = as.vector(rowSums(t(residual_test^2)))
   auc_te = auc(y_te,pi_hat_te)
   g.res_te = (y_te - pi_hat_te)/sqrt(pi_hat_te*(1-pi_hat_te))
   g.stat_te = as.vector(rowSums(t(g.res_te^2)))
   
-  cv_result = rbind(cv_result, c(k = i,best_lambda = best_result$lambda, beta_vec = best_result[2:(dim(best_result)[2]-3)],g.stat_tr = best_result$g.stat_tr, auc_te = auc_te,g.stat_te = g.stat_te,MSE_test = MSE_test))
+  cv_result = rbind(cv_result, c(k = i,best_lambda = best_result$lambda, beta_vec = best_result[2:(dim(best_result)[2]-3)],g.stat_tr = best_result$g.stat_tr, auc_te = auc_te,g.stat_te = g.stat_te,SSE_test = SSE_test))
   #cv_result = as.tibble(cv_result)  
   }
   
@@ -287,7 +287,7 @@ g1 = x$result_tr %>%
   geom_line()+theme_bw()
 
 g2 = x$result_tr %>% 
-  ggplot(aes(x = lambda, y = MSE_tr))+
+  ggplot(aes(x = lambda, y = SSE_tr))+
   geom_line()+theme_bw()
 
 g3 = x$result_tr %>% 
