--- a/NR&los-lasso&CV(version7)-sibei.Rmd
+++ b/NR&los-lasso&CV(version7)-sibei.Rmd
@@ -109,9 +109,7 @@ result3[nrow(result3),]
 
 # Logistic Lasso
 ```{r}
-ori_linear=glm(y_matrix~x_matrix[,-1],family=binomial(link='logit'))
-coef_1=coef(ori_linear) %>% as.vector()
-lambda_max=max(abs(coef(ori_linear)))
+
 lambdas=seq(14, 0.01,length = 100)
 len=length(lambdas)
 
@@ -130,12 +128,12 @@ len=length(lambdas)
 ## solution of betas of each lambda
 ```{r}
 
-# working stuff
+# working stuff to update once
  quadratic_coor_wise_once = function(beta_vec,x_matrix,y_matrix,lambda){
   x = x_matrix
   y = y_matrix
   pi=exp(x%*%(beta_vec))/(1+exp(x%*%beta_vec))
-  wi=pi*(1-pi)
+  wi=pi*(1-pi)+rep(1e-10,length(pi))
   zi=x%*%beta_vec+(y-pi)/wi
   
   
@@ -154,11 +152,11 @@ len=length(lambdas)
     i=i+1
   }
  ## update working staff to get the value of target function
-  pi=exp(x%*%(beta_update))/(1+exp(x%*%beta_update))
-  wi=pi*(1-pi)
-  zi=x%*%beta_update+(y-pi)/wi
+  pi2=exp(x%*%(beta_update))/(1+exp(x%*%beta_update))
+  wi2=pi2*(1-pi2)+rep(1e-10,length(pi2))
+  zi2=x%*%beta_update+(y-pi2)/wi2
   
-    cur_tar=1/(2*length(y))*(sum(wi*(zi-x%*%beta_update)^2))+lambda*sum(abs(beta_update[-1]))
+    cur_tar=(1/(2*length(y)))*(sum(wi2*(zi2-x%*%beta_update)^2))+lambda*sum(abs(beta_update[-1]))
   
  return(c(beta_update,cur_tar))
 }
@@ -174,26 +172,28 @@ len=length(lambdas)
   x = x_matrix
   y = y_matrix
   pi=exp(x%*%(beta_enter))/(1+exp(x%*%beta_enter))
-  wi=pi*(1-pi)
+  wi=pi*(1-pi)+rep(1e-10,length(pi))
   zi=x%*%beta_enter+(y-pi)/wi
   
-  cur=1/(2*length(y))*(sum(wi*(zi-x%*%beta_enter)^2))+lambda*sum(abs(beta_enter[-1]))
+  cur=(1/(2*length(y)))*(sum(wi*(zi-x%*%beta_enter)^2))+lambda*sum(abs(beta_enter[-1]))
   pre=Inf
   beta_3=beta_enter
   iteration=0
-  result4=c(beta_enter,cur)
-  names(result4)=c(str_c("beta",0:10),"cur_tar")
- while((abs(cur-pre)>tol) &(cur<pre)& (iteration < max)){
+  result4=c(beta_enter,cur,iteration)
+  names(result4)=c(str_c("beta",0:10),"cur_tar","inter")
+ while((abs(cur-pre)>tol) & (iteration < max)){
    pre=cur
   iteration=iteration+1
    result_new=quadratic_coor_wise_once(beta_3,x,y,lambda)
    beta_new=result_new[1:11]
    cur=result_new[12]
-  result4=rbind(result4,result_new)
+   result_new2=c(result_new,iteration)
+  result4=rbind(result4,result_new2)
   beta_3=beta_new
  }
-  c1=dim(result4)[1]
-  return(result4[c1-1,1:11]) }
+  min_tar=min(result4[,"cur_tar"])
+order2=which(result4[,"cur_tar"]==min_tar)
+  return(result4[order2,1:11]) }
 
 beta_enter=rep(0.02,11)
 quadratic_coor_wise_all(beta_enter,x_matrix,y_matrix,0)
@@ -230,10 +230,33 @@ mse_folds=matrix(rep(NA,fold_number*len2),nrow=fold_number,ncol=len2)
 auc_folds=matrix(rep(NA,fold_number*len2),nrow=fold_number,ncol=len2)
 ```
 
+```{r}
+auc = function(yi,pi_hat){
+  auc = c()
+  for (i in seq(dim(pi_hat)[2])){
+    c = tibble(pi_hat = pi_hat[,i],yi = yi)
+    m = sum(yi==1)
+    n = length(yi)-m
+    c = 
+      c %>% 
+      arrange(pi_hat) %>% 
+      mutate(order = seq_along(pi_hat)) %>% 
+      group_by(pi_hat) %>% 
+      mutate(mean_order = mean(order))
+    pos_order = c %>% filter(yi == 1) %>% pull(mean_order)
+    auc = c(auc,(sum(pos_order)-m*(m+1)/2)/(m*n))
+  }
+  
+  
+  return(auc)
+}
+```
+
 
 ```{r}
 k=1
 library(pROC)
+beta_enter=rep(0.02,11)
 ## initial guess = beta_2=rep(0.02,11)
 for(k in 1:fold_number){
   
@@ -246,20 +269,32 @@ for(k in 1:fold_number){
 
   x_vali = as.matrix(cbind(rep(1,nrow(vali_fold)),scale(vali_fold[,3:12]))) 
   y_vali = vali_fold$diagnosis
- 
+  if(k==1){output=c(0,beta_enter,Inf,Inf,Inf)
+ names(output)=c("fold",str_c("beta",0:10),"lambda","mse","auc")}
   d=1
   for(d in 1:(len2)){
-  result=quadratic_coor_wise_all(beta_enter,x_train,y_train,lambdas[d])
+  result=quadratic_coor_wise_all(beta_enter,x_train,y_train,lambdas2[d])
   theta= x_vali%*% t(t(result))
   y_fit=exp(theta)/(1+exp(theta))
+  mse=mse(y_vali,y_fit)
+  auc=auc(y_vali,y_fit)
+  output=rbind(output,c(k,result,lambdas2[d],mse,auc))
+  auc_folds[k,d]=auc(y_vali,y_fit)
   mse_folds[k,d]=mse(y_vali,y_fit)
   d=d+1
 }
   k=k+1
 }
 
-mse_folds
+output
+## if use mse
+M=output %>% as.data.frame()
+C1=group_by(M[-1,],fold) %>% filter(mse==min(mse)) 
+
+#if use auc to filter, but in fold 2, it produce several lambda, then among those lambdas, use mse to select again
+C2= group_by(M[-1,],fold) %>% filter(auc==max(auc)) %>% filter(mse==min(mse))
 ```
+
 
 
 ```{r}
@@ -300,7 +335,7 @@ ctrl1 <- trainControl(method = "cv", number = 5)
 lasso.fit <- train(x.mat, y.class,
                    method = "glmnet",
                    tuneGrid = expand.grid(alpha = 1,
-                                          lambda = seq(3,-1,length=100)), 
+                                          lambda = seq(3,0,length=100)), 
                    # preProc = c("center", "scale"),
                    trControl = ctrl1)
 
